@@ -1,3 +1,8 @@
+2007-06-27  Boyd Timothy <btimothy@gmail.com> 
+
+	* Tomboy/FileSystemSyncServer.cs: Removing old code that was commented
+	  out.
+
 2007-06-26  Boyd Timothy <btimothy@gmail.com> 
 
 	* Tomboy/SyncManager.cs: Added Revision to the lock file though I'm not
